# IngreGenius

./: .gitignore  GETTING_STARTED.md  README.md  RESULTS.md  Testing_api.py  app.py  pyproject.toml
Data/Fridge objects.v12i.yolov8/: data.yaml
Data/Fridge objects.v12i.yolov8/train/: labels.cache
Data/Fridge objects.v12i.yolov8/valid/: labels.cache
Data/IngreGenius-Final-Model-training-dataset/: master_classes.txt  master_data.yaml  remap_labels.py
Data/IngreGenius-Final-Model-training-dataset/master_labels/Fridge objects.v12i.yolov8/test/labels/: 02309_01_red_knight_jpg.rf.0daf8bd42efd6d70336c37ce39fd86a6.txt  117809_4_jpg.rf.56fb2c89a0001ddfe3fc19fb10bc46fc.txt  19303_jpeg.rf.812e232edd7aff8256d275b1c4dfd89d.txt  27419_80_jpg.rf.95de63e7952c4103a503c29ed9ae9a36.txt  360_F_419967145_gk9qwZegKoZHllQ9crqgRVTLSKxOSr9y_jpg.rf.d755a2d914ba135a93e66821b6224051.txt  9098459349022_jpg.rf.e1300ca9b95a5581d5635d9bc85622bf.txt  97dd51fa4a64b690737c47aaccec_jpg.rf.4c98e6ce2f5f8383d8bbea3a1cce053c.txt  Cascaval-Dalia_Floare-din-Banat-800x800-1-300x300_jpg.rf.652988fb71fee9ecaf33555c406168b3.txt  Collage-Maker-15-Jul-2022-01-30-PM_jpg.rf.e3aaeb0684aa6643e715504ee222558c.txt  (+54 more)
src/ingregenius/: Train_Food_Model.ipynb  __init__.py  food_detector.py  ingredients.py  recipe_generator.py  upload_data.py
src/ingregenius/.ipynb_checkpoints/: Train_Food_Model-checkpoint.ipynb
src/models/IngreGenius_Fridge_Run1/: args.yaml  results.csv
src/models/IngreGenius_Fridge_Run2_AdamW/: args.yaml  results.csv
src/models/IngreGenius_SuperModel_Run13/: args.yaml  results.csv
(+1509 files in other folders)
